--- a/4.邮箱接口.md
+++ b/4.邮箱接口.md
@@ -11,8 +11,8 @@ create table mail_code
     code        varchar(5)   not null comment '邮箱验证码',
     create_time datetime     not null comment '创建时间',
     status      tinyint      not null comment '0: 未使用, 1: 已使用',
-    constraint mail_code_pk
-        unique (mail, code)
+    update_time datetime     not null comment '修改时间',
+    primary key (mail, code)
 )
     comment '邮箱验证码';
 ```
@@ -21,6 +21,9 @@ create table mail_code
 - 【code】：存储发送的邮箱验证码，长度为5。
 - 【create_time】：存储创建时间。
 - 【status】：存储邮箱验证码的状态，0：未使用，1：已使用。
+- 【update_time】：存储修改时间
+
+【mail】和【code】采用组合主键。
 
 【create_time】和【status】是比较关键的两个字段，【create_time】除了记录创建的时间外，还能计算邮箱验证码的过期时间。计算逻辑是这样的：
 
@@ -32,7 +35,7 @@ create table mail_code
 
 而【status】则用来记录验证码是否已经使用，只有未使用的验证码才被认为是有效的，为什么设计这样的一个字段？因为存在这样的情况：当一个用户接收到服务器发送的邮箱验证码后，他不立即使用这个验证码，而是重新发送一个验证码，并使用这次的验证码，那么上一次发送的验证码就是无效的，因此我们需要一个字段来记录验证码的状态。
 
-服务器每发送一条邮箱验证码，都会向邮箱表中插入一条数据，默认情况下，邮箱验证码的状态应该是未使用，即有效的，但是就像我上面说到的情况，如果用户连续让服务器发送邮箱，那么应该以最后一次发送的邮箱为准，因此我们在插入记录之前，应该先以收件人的【email】为条件，将对应的【status】改为1，让其先失效，然后再插入一条有效的验证码，类似如下效果：
+服务器每发送一条邮箱验证码，都会向邮【mail_code】表中插入一条数据，默认情况下，邮箱验证码的状态应该是未使用，即有效的，但是就像我上面说到的情况，如果用户连续让服务器发送邮箱，那么应该以最后一次发送的邮箱为准，因此我们在插入记录之前，应该先以收件人的【email】为条件，将所有对应的【status】改为1，让其先失效，然后再插入一条有效的验证码，类似如下效果：
 
 | mail             | code   | create_time         | status |
 | ---------------- | ------ | ------------------- | ------ |
@@ -46,7 +49,7 @@ create table mail_code
 
 # 2 发送邮箱验证码接口
 
-在注册和找回密码时，需要发送邮箱验证码。发送需要用户输入邮箱以及图片验证码，在后端需要校验邮箱的唯一性，因为时注册的原因，如果【user_info】中存在相同的邮箱，则不能注册，还要对图片验证码进行校验，图片验证码使用后不管是否校验成功一定义要让其失效(从session中删除)。
+在注册和找回密码时，需要发送邮箱验证码。发送需要用户输入邮箱以及图片验证码，在后端需要校验邮箱的唯一性，因为是注册的原因，如果【user_info】表中存在相同的邮箱，则不能注册，还要对图片验证码进行校验，图片验证码使用后不管是否校验成功一定义要让其失效(从session中删除)。
 
 - 请求地址：
 
@@ -76,4 +79,17 @@ create table mail_code
   }
   ```
 
-  
+
+代码实现：
+
+要校验邮箱是否唯一，需要通过【mail】查询【user_info】，因此在【UserInfoMapper】中增加一个此查询方法：
+
+```java
+/**
+ * 根据邮箱查询
+ * @param email
+ * @return
+ */
+UserInfo selectByEmail(String email);
+```
+
