--- a/4.邮箱接口.md
+++ b/4.邮箱接口.md
@@ -201,6 +201,9 @@ public Result sendmail(String mail, String checkCode, HttpSession session) {
         }
         // 从session中获取邮箱的图片验证码
         String mailCheckCode = (String) session.getAttribute(Constant.CHECK_CODE_EMAIL);
+        if (StringUtil.isEmpty(sCheckCode)) {
+            throw new BusinessException(CommonMsg.MAIL_CHECK_CODE_EXPIRED); // 校验图片验证码是否过期
+        }
         log.info("生成的邮箱图片验证码: {}", mailCheckCode);
         mailCodeService.sendMailCode(mail, checkCode, mailCheckCode);
         return Result.success();
