--- a/5.注册接口.md
+++ b/5.注册接口.md
@@ -163,6 +163,9 @@ public Result register(String nickname, String password, String mail, String che
             throw new BusinessException(ResponseCodeEnum.CODE_600);
         }
         String sCheckCode = (String) session.getAttribute(Constant.CHECK_CODE);
+        if (StringUtil.isEmpty(sCheckCode)) {
+            throw new BusinessException(CommonMsg.CHECK_CODE_EXPIRED);
+        }
         log.info("生成的图片验证码: {}", sCheckCode);
         userInfoService.register(nickname, password, mail, checkCode, sCheckCode, mailCode);
         return Result.success();
