--- a/6.系统设置.md
+++ b/6.系统设置.md
@@ -15,7 +15,7 @@
 
 采用JSON格式存储配置项的具体字段，可以让我们灵活地表达和管理这些设置项。启动时，我们只需要从数据库中读取这些数据，然后将【json_content】字段反序列化为对象，并将其存入相应的实体类中，便于后续的操作和维护。这样既能避免为每个设置项单独建表，又能提高系统的灵活性和可扩展性。
 
-## 1.1 sys_setting
+## 1.1 sys_setting表
 
 系统设置表，表结构如下：
 
@@ -88,7 +88,7 @@ post
 
 ```json
 {
-    "postPoints": 3,		// 帖子是否需要审核
+    "postPoints": 3,		// 发帖积分
     "postNum": 3,			// 每天可发帖数量
     "uploadImgNum": 50,		// 每天可上传图片数量
     "attachmentSize": 3		// 附件大小
@@ -203,6 +203,226 @@ public class SysSetting4Audit {
 
 其他按照此实体完成，这里不展示。
 
+然后我们再创建一个大的设置类【SettingContainer】，用于管理这6项设置，它的属性就是这些设置项对象。
 
+```java
+package com.ling.entity.dto;
+
+/**
+ * 系统设置容器
+ */
+public class SysSettingContainer {
+    private SysSetting4Audit sysSetting4Audit;          // 审核设置
+    private SysSetting4Comment sysSetting4Comment;      // 评论设置
+    private SysSetting4Like sysSetting4Like;            // 点赞设置
+    private SysSetting4Mail sysSetting4Mail;            // 邮件设置 
+    private SysSetting4Post sysSetting4Post;            // 发帖设置
+    private SysSetting4Register sysSetting4Register;    // 注册设置
+
+
+    public SysSettingContainer() {
+    }
+
+    public SysSettingContainer(SysSetting4Audit sysSetting4Audit, SysSetting4Comment sysSetting4Comment, SysSetting4Like sysSetting4Like, SysSetting4Mail sysSetting4Mail, SysSetting4Post sysSetting4Post, SysSetting4Register sysSetting4Register) {
+        this.sysSetting4Audit = sysSetting4Audit;
+        this.sysSetting4Comment = sysSetting4Comment;
+        this.sysSetting4Like = sysSetting4Like;
+        this.sysSetting4Mail = sysSetting4Mail;
+        this.sysSetting4Post = sysSetting4Post;
+        this.sysSetting4Register = sysSetting4Register;
+    }
+
+    /**
+     * 获取
+     * @return sysSetting4Audit
+     */
+    public SysSetting4Audit getSysSetting4Audit() {
+        return sysSetting4Audit;
+    }
+
+    /**
+     * 设置
+     * @param sysSetting4Audit
+     */
+    public void setSysSetting4Audit(SysSetting4Audit sysSetting4Audit) {
+        this.sysSetting4Audit = sysSetting4Audit;
+    }
+
+    /**
+     * 获取
+     * @return sysSetting4Comment
+     */
+    public SysSetting4Comment getSysSetting4Comment() {
+        return sysSetting4Comment;
+    }
+
+    /**
+     * 设置
+     * @param sysSetting4Comment
+     */
+    public void setSysSetting4Comment(SysSetting4Comment sysSetting4Comment) {
+        this.sysSetting4Comment = sysSetting4Comment;
+    }
+
+    /**
+     * 获取
+     * @return sysSetting4Like
+     */
+    public SysSetting4Like getSysSetting4Like() {
+        return sysSetting4Like;
+    }
+
+    /**
+     * 设置
+     * @param sysSetting4Like
+     */
+    public void setSysSetting4Like(SysSetting4Like sysSetting4Like) {
+        this.sysSetting4Like = sysSetting4Like;
+    }
+
+    /**
+     * 获取
+     * @return sysSetting4Mail
+     */
+    public SysSetting4Mail getSysSetting4Mail() {
+        return sysSetting4Mail;
+    }
+
+    /**
+     * 设置
+     * @param sysSetting4Mail
+     */
+    public void setSysSetting4Mail(SysSetting4Mail sysSetting4Mail) {
+        this.sysSetting4Mail = sysSetting4Mail;
+    }
+
+    /**
+     * 获取
+     * @return sysSetting4Post
+     */
+    public SysSetting4Post getSysSetting4Post() {
+        return sysSetting4Post;
+    }
+
+    /**
+     * 设置
+     * @param sysSetting4Post
+     */
+    public void setSysSetting4Post(SysSetting4Post sysSetting4Post) {
+        this.sysSetting4Post = sysSetting4Post;
+    }
+
+    /**
+     * 获取
+     * @return sysSetting4Register
+     */
+    public SysSetting4Register getSysSetting4Register() {
+        return sysSetting4Register;
+    }
+
+    /**
+     * 设置
+     * @param sysSetting4Register
+     */
+    public void setSysSetting4Register(SysSetting4Register sysSetting4Register) {
+        this.sysSetting4Register = sysSetting4Register;
+    }
+
+    public String toString() {
+        return "SysSettingContainer{sysSetting4Audit = " + sysSetting4Audit + ", sysSetting4Comment = " + sysSetting4Comment + ", sysSetting4Like = " + sysSetting4Like + ", sysSetting4Mail = " + sysSetting4Mail + ", sysSetting4Post = " + sysSetting4Post + ", sysSetting4Register = " + sysSetting4Register + "}";
+    }
+}
+```
+
+## 1.3 存入内存
+
+我们已创建设置项的实体，接下来需要从【sys_setting】表中读取数据，将其封装到【SettingContainer】中，并存储至内存。
+
+由于【sys_setting】表中的每一项数据对应一个设置项对象，而这些对象类型各异，因此需要根据【code】字段动态生成对应的对象。然而，直接使用【if-else】分支来判断会导致代码不够灵活且难以维护。目前虽只有6个设置项，但未来可能新增更多类，导致【if-else】分支进一步膨胀。为解决这一问题，推荐使用反射机制，具体实现步骤如下：
+
+1、定义一个设置项的枚举，将所有设置项集中维护在枚举中。枚举需要包含以下字段：
+
+- **code**：与【sys_setting】表的【code】字段一致，用于获取对应的枚举对象。
+- **className**：设置项类的全限定名，用于通过反射生成对象实例。
+- **field**：系统设置容器类的字段。
+
+```java
+package com.ling.enums;
+
+/**
+ * 设置项枚举
+ */
+public enum SysSettingItemEnum {
+    AUDIT("audit", "com.ling.entity.dto.SysSetting4Audit.java", "sysSetting4Audit"),
+    COMMENT("comment", "com.ling.entity.dto.SysSetting4Comment.java", "sysSetting4Comment"),
+    LIKE("like", "com.ling.entity.dto.SysSetting4Like.java", "sysSetting4Like"),
+    MAIL("mail", "com.ling.entity.dto.SysSetting4Mail.java", "sysSetting4Mail"),
+    POST("post", "com.ling.entity.dto.SysSetting4Post.java", "sysSetting4Post"),
+    REGISTER("register", "com.ling.entity.dto.SysSetting4Register.java", "sysSetting4Register");
+
+    private String code;        // 设置项编码
+    private String classname;   // 设置项类全类名
+    private String field;       // 系统设置容器类的字段
+
+    SysSettingItemEnum() {
+    }
+
+    SysSettingItemEnum(String code, String classname, String field) {
+        this.code = code;
+        this.classname = classname;
+        this.field = field;
+    }
+
+    /**
+     * 通过code获取枚举项
+     *
+     * @param code
+     * @return
+     */
+    public static SysSettingItemEnum getItemByCode(String code) {
+        for (SysSettingItemEnum item : SysSettingItemEnum.values()) {
+            if (code.equals(item.getCode())) return item;
+        }
+        return null;
+    }
+
+    /**
+     * 获取
+     *
+     * @return code
+     */
+    public String getCode() {
+        return code;
+    }
+
+    /**
+     * 获取
+     *
+     * @return classname
+     */
+    public String getClassname() {
+        return classname;
+    }
+
+    /**
+     * 获取
+     *
+     * @return desc
+     */
+    public String getField() {
+        return field;
+    }
+}
+```
+
+在枚举中，定义了一个静态方法 `getItemByCode()`，根据传入的【code】值获取对应的枚举。
+
+2、在 `SysSettingService` 接口中新增一个 `refreshCache()` 方法，其主要功能是重新加载【sys_setting】表中的数据，将其封装到 `SettingContainer` 中，并存储至缓存，实现设置数据的动态更新。该方法的核心作用是确保内存中的配置数据与数据库保持一致。
+
+方法执行时机：
+
+- **项目启动**：确保在应用启动时加载最新的配置数据。
+
+- **更新设置参数后**：当设置项被修改后，及时刷新缓存以反映最新的配置。
 
 ​                                                                                                                                                                        
