更新、新增第7章

--- a/5.注册接口.md
+++ b/5.注册接口.md
@@ -90,11 +90,13 @@ MailCode selectByMailAndCode(String mail, String code);
 - email：来自参数`mail`。
 - password：来自参数`password`，需要经过MD5加密。
 - join_time：取当前时间。
+- total_integral：总积分，先设置为0。
+- current_integral：当前积分，先设置为0。
 - status：默认未启用状态。
 - create_time：取当前时间。
 - update_time：取当前时间。
 
-用户注册时还需要给他一个初始的积分，这里我们忽略了`total_integral`和`current_integral`字段，因为积分需要通过配置来完成，这里暂时不考虑。
+用户注册时还需要给他一个初始的积分，默认都为0，因为积分还需要通过配置来完成，因此先设置为0，后续从系统设置中读取积分并更新。
 
 调用插入方法将用户信息插入，然后一定要将当前`mail`的状态更新为已使用，注册完成，代表邮箱验证码已经使用过了，需要更新状态。这个功能我们在邮箱验证码接口中已经实现了，直接调用即可。
 
@@ -131,7 +133,8 @@ public void register(String nickname, String password, String mail, String check
     userInfo.setPassword(StringUtil.encodeMD5(password));
     Date date = new Date();
     userInfo.setJoinTime(date);
-    // 设置积分 TODO
+	userInfo.setTotalIntegral(Constant.NUM_0);      // 初始积分为0，后续从系统设置中更新
+    userInfo.setCurrentIntegral(Constant.NUM_0);
     userInfo.setStatus(UserStatusEnum.ENABLE.getStatus());
     userInfo.setCreateTime(date);
     userInfo.setUpdateTime(date);
