--- a/6.系统设置.md
+++ b/6.系统设置.md
@@ -8,12 +8,12 @@
 
 这些预设的参数需要存储在数据库中，并且在系统启动时从数据库加载并将其存入内存，在整个系统的生命周期中使用这些启动时加载的配置项。
 
-由于设置项需要存储在数据库中，我们需要设计合适的表结构。上诉的6个设置项，是否为需要每个设置项单独创建一张表呢？这显然不是一个高效的方案。如果以后需要新增设置项，难道每次都需要创建一张新表吗？仔细分析后发现，实际上每个设置项都可以视作一个对象，设置项中的各字段对应对象的属性。因此，我们可以设计一张表来统一存储所有设置项，每一行数据代表一个设置项。表中至少需要两个字段：【code】和【json_content】。
+由于设置项需要存储在数据库中，我们需要设计合适的表结构。上诉的6个设置项，是否为需要每个设置项单独创建一张表呢？这显然不是一个高效的方案。如果以后需要新增设置项，难道每次都需要创建一张新表吗？仔细分析后发现，实际上每个设置项都可以视作一个对象，设置项中的各字段对应对象的属性。因此，我们可以设计一张表来统一存储所有设置项，每一行数据代表一个设置项。表中至少需要两个字段：`code`和`json_content`。
 
-- 【code】：存储设置项的标识或名称；
-- 【json_content】：存储设置项的具体内容，以JSON字符串形式表示，方便扩展和修改。
+- `code`：存储设置项的标识或名称；
+- `json_content`：存储设置项的具体内容，以JSON字符串形式表示，方便扩展和修改。
 
-采用JSON格式存储配置项的具体字段，可以让我们灵活地表达和管理这些设置项。启动时，我们只需要从数据库中读取这些数据，然后将【json_content】字段反序列化为对象，并将其存入相应的实体类中，便于后续的操作和维护。这样既能避免为每个设置项单独建表，又能提高系统的灵活性和可扩展性。
+采用JSON格式存储配置项的具体字段，可以让我们灵活地表达和管理这些设置项。启动时，我们只需要从数据库中读取这些数据，然后将`json_content`字段反序列化为对象，并将其存入相应的实体类中，便于后续的操作和维护。这样既能避免为每个设置项单独建表，又能提高系统的灵活性和可扩展性。
 
 ## 1.1 sys_setting表
 
@@ -33,13 +33,13 @@ create table sys_setting
 
 根据效果图中的6种设置信息，我们设计如下的json消息：
 
-1、注册欢迎消息，它的【code】为：
+1、注册欢迎消息，它的`code`为：
 
 ```
 register
 ```
 
-【json_content】为：
+`json_content`为：
 
 ```json
 {
@@ -47,13 +47,13 @@ register
 }
 ```
 
-2、邮件设置，它的【code】为：
+2、邮件设置，它的`code`为：
 
 ```
 mail
 ```
 
-【json_content】为：
+`json_content`为：
 
 ```json
 // %s占位符，到时候替换为具体的验证码
@@ -63,13 +63,13 @@ mail
 }
 ```
 
-3、审核设置，它的【code】为：
+3、审核设置，它的`code`为：
 
 ```
 audit
 ```
 
-【json_content】为：
+`json_content`为：
 
 ```json
 {
@@ -78,13 +78,13 @@ audit
 }
 ```
 
-4、发帖设置，它的【code】为：
+4、发帖设置，它的`code`为：
 
 ```
 post
 ```
 
-【json_content】为：
+`json_content`为：
 
 ```json
 {
@@ -95,13 +95,13 @@ post
 }
 ```
 
-5、评论设置，它的【code】为：
+5、评论设置，它的`code`为：
 
 ```
 comment
 ```
 
-【json_content】为：
+`json_content`为：
 
 ```json
 {
@@ -111,13 +111,13 @@ comment
 }
 ```
 
-6、点赞设置，它的【code】为：
+6、点赞设置，它的`code`为：
 
 ```
 like
 ```
 
-【json_content】为：
+`json_content`为：
 
 ```json
 {
@@ -138,7 +138,7 @@ INSERT INTO ling_bbs.sys_setting (code, json_content, create_time, update_time) 
 
 ## 1.2 创建对应实体
 
-首先是【SysSetting】，作为表实体需要创建对应的CRUD，这里不展示，参考[springboot-vue-note](https://github.com/lingzed/springboot-vue-note/tree/main)第26章。
+首先是`SysSetting`，作为表实体需要创建对应的CRUD，这里不展示，参考[springboot-vue-note](https://github.com/lingzed/springboot-vue-note/tree/main)第26章。
 
 然后创建6中设置对应的实体，命名规则统一以SysSetting4为前缀，4通for：
 
@@ -203,7 +203,7 @@ public class SysSetting4Audit {
 
 其他按照此实体完成，这里不展示。
 
-然后我们再创建一个大的设置类【SettingContainer】，用于管理这6项设置，它的属性就是这些设置项对象。
+然后我们再创建一个大的设置类`SettingContainer`，用于管理这6项设置，它的属性就是这些设置项对象。
 
 ```java
 package com.ling.entity.dto;
@@ -336,13 +336,15 @@ public class SysSettingContainer {
 
 ## 1.3 存入内存
 
-我们已创建设置项的实体，接下来需要从【sys_setting】表中读取数据，将其封装到【SettingContainer】中，并存储至内存。
+我们已创建设置项的实体，接下来需要从`sys_setting`表中读取数据，将其封装到`SettingContainer`中，并存储至内存。
 
-由于【sys_setting】表中的每一项数据对应一个设置项对象，而这些对象类型各异，因此需要根据【code】字段动态生成对应的对象。然而，直接使用【if-else】分支来判断会导致代码不够灵活且难以维护。目前虽只有6个设置项，但未来可能新增更多类，导致【if-else】分支进一步膨胀。为解决这一问题，推荐使用反射机制，具体实现步骤如下：
+由于`sys_setting`表中的每一项数据对应一个设置项对象，而这些对象类型各异，因此需要根据`code`字段动态生成对应的对象。然而，直接使用`if-else`分支来判断会导致代码不够灵活且难以维护。目前虽只有6个设置项，但未来可能新增更多类，导致`if-else`分支进一步膨胀。为解决这一问题，推荐使用反射机制，具体实现步骤如下：
+
+### 1.3.1 定义系统设置项枚举
 
 1、定义一个设置项的枚举，将所有设置项集中维护在枚举中。枚举需要包含以下字段：
 
-- **code**：与【sys_setting】表的【code】字段一致，用于获取对应的枚举对象。
+- **code**：与`sys_setting`表的`code`字段一致，用于获取对应的枚举对象。
 - **className**：设置项类的全限定名，用于通过反射生成对象实例。
 - **field**：系统设置容器类的字段。
 
@@ -353,12 +355,12 @@ package com.ling.enums;
  * 设置项枚举
  */
 public enum SysSettingItemEnum {
-    AUDIT("audit", "com.ling.entity.dto.SysSetting4Audit.java", "sysSetting4Audit"),
-    COMMENT("comment", "com.ling.entity.dto.SysSetting4Comment.java", "sysSetting4Comment"),
-    LIKE("like", "com.ling.entity.dto.SysSetting4Like.java", "sysSetting4Like"),
-    MAIL("mail", "com.ling.entity.dto.SysSetting4Mail.java", "sysSetting4Mail"),
-    POST("post", "com.ling.entity.dto.SysSetting4Post.java", "sysSetting4Post"),
-    REGISTER("register", "com.ling.entity.dto.SysSetting4Register.java", "sysSetting4Register");
+    AUDIT("audit", "com.ling.entity.dto.SysSetting4Audit", "sysSetting4Audit"),
+    COMMENT("comment", "com.ling.entity.dto.SysSetting4Comment", "sysSetting4Comment"),
+    LIKE("like", "com.ling.entity.dto.SysSetting4Like", "sysSetting4Like"),
+    MAIL("mail", "com.ling.entity.dto.SysSetting4Mail", "sysSetting4Mail"),
+    POST("post", "com.ling.entity.dto.SysSetting4Post", "sysSetting4Post"),
+    REGISTER("register", "com.ling.entity.dto.SysSetting4Register", "sysSetting4Register");
 
     private String code;        // 设置项编码
     private String classname;   // 设置项类全类名
@@ -415,9 +417,11 @@ public enum SysSettingItemEnum {
 }
 ```
 
-在枚举中，定义了一个静态方法 `getItemByCode()`，根据传入的【code】值获取对应的枚举。
+在枚举中，定义了一个静态方法 `getItemByCode()`，根据传入的`code`值获取对应的枚举，方便我们快速获取枚举项。
 
-2、在 `SysSettingService` 接口中新增一个 `refreshCache()` 方法，其主要功能是重新加载【sys_setting】表中的数据，将其封装到 `SettingContainer` 中，并存储至缓存，实现设置数据的动态更新。该方法的核心作用是确保内存中的配置数据与数据库保持一致。
+### 1.3.2 实现刷新方法
+
+2、在 `SysSettingService` 接口中新增一个 `refreshCache()` 方法，其主要功能是重新加载`sys_setting`表中的数据，将其封装到 `SettingContainer` 中，并存储至缓存，实现设置数据的动态更新。该方法的核心作用是确保内存中的配置数据与数据库保持一致。
 
 方法执行时机：
 
@@ -425,4 +429,137 @@ public enum SysSettingItemEnum {
 
 - **更新设置参数后**：当设置项被修改后，及时刷新缓存以反映最新的配置。
 
-​                                                                                                                                                                        
+新增接口方法这里演示。实现 `refreshCache()` ，以下是源码：
+
+```java
+/**
+ * 刷新系统设置的缓存
+ */
+@Override
+public void refreshCache() {
+    try {
+        SysSettingContainer sysSettingContainer = new SysSettingContainer();
+        List<SysSetting> sysSettings = findAll();   // 查询所有系统设置
+        for (SysSetting sysSetting : sysSettings) {
+            String jsonContent = sysSetting.getJsonContent();   // 获取系统设置的JSON字符串内容
+            if (StringUtil.isEmpty(jsonContent)) continue;
+            // 获取系统设置项枚举
+            SysSettingItemEnum settingItem = SysSettingItemEnum.getItemByCode(sysSetting.getCode());
+            // 反射拿到SysSettingContainer对应属性的setter
+            PropertyDescriptor pd = new PropertyDescriptor(settingItem.getField(), SysSettingContainer.class);
+            Method writeMethod = pd.getWriteMethod();  // 获取写方法
+            Class<?> aClass = Class.forName(settingItem.getClassname());
+            // 调用setter方法，将系统设置的JSON字符串内容转换为对应的Java对象
+            writeMethod.invoke(sysSettingContainer, JSON.parseObject(jsonContent, aClass));
+        }
+        // 将系统设置容器放入缓存
+        SysCacheUtil.setSysCache(sysSettingContainer);
+    } catch (Exception e) {
+        throw new BusinessException(CommonMsg.REFRESH_CACHE_FAIL, e);
+    }
+}
+```
+
+思路如下：
+
+**1、查询所有设置信息**
+从`sys_setting`表中读取所有设置项记录，形成设置项集合。
+
+**2、遍历设置项集合**
+遍历每个设置项，逐一处理。
+
+**3、获取设置项的 `code`**
+从当前设置项中提取 `code` 值，用于后续匹配。
+
+**4、通过 `code` 获取对应的枚举项**
+利用枚举的 `getItemByCode()` 方法，找到与当前 `code` 对应的枚举项。枚举中包含以下关键信息：
+
+- **设置项类的全类名**：指定解析 JSON 字符串所需的目标类型。
+- **系统设置容器的属性名**：指明封装对象时对应的目标属性。
+
+**5、解析 JSON 字符串为对象**
+从设置项中获取其配置值（JSON 格式的字符串），通过枚举提供的全类名，利用反射将 JSON 解析为指定类型的对象。
+
+**6、通过属性名反射获取对应的 Setter 方法**
+根据枚举中的属性名，使用反射获取系统设置容器中相应属性的 Setter 方法。
+
+**7、调用 Setter 方法封装数据**
+调用反射获取的 Setter 方法，将解析出的对象作为参数传入，从而将 JSON 数据封装到系统设置容器中。
+
+最后，将封装完成的系统设置容器存入缓存中。这里使用 `Map`作为缓存容器，并通过 `SysCacheUtil` 工具类进行封装和管理，确保缓存操作集中、便于维护。
+
+源码如下：
+
+```java
+package com.ling.utils;
+
+import com.ling.entity.dto.SysSettingContainer;
+
+import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
+
+/**
+ * 系统设置缓存工具类
+ */
+public class SysCacheUtil {
+    private static final String SYS_CACHE = "sysCache";     // 系统设置缓存key
+    // ConcurrentHashMap保证线程安全
+    private static final Map<String, SysSettingContainer> sysCache = new ConcurrentHashMap<>(); // 系统设置缓存
+
+    /**
+     * 获取系统设置缓存
+     *
+     * @return
+     */
+    public static Map<String, SysSettingContainer> getSysCache() {
+        return sysCache;
+    }
+
+    /**
+     * 设置系统设置缓存
+     *
+     * @param sysSettingContainer
+     */
+    public static void setSysCache(SysSettingContainer sysSettingContainer) {
+        sysCache.put(SYS_CACHE, sysSettingContainer);
+    }
+}
+```
+
+### 1.3.3 项目启动时执行
+
+为确保应用启动时加载最新的配置数据，可以通过实现 `ApplicationRunner` 接口重写 `run()`方法。`ApplicationRunner`  是 Spring Boot 提供的生命周期钩子，能够在应用启动完成后自动执行初始化逻辑。：
+
+```java
+package com.ling;
+
+import com.ling.commons.CommonMsg;
+import com.ling.exception.BusinessException;
+import com.ling.service.SysSettingService;
+import org.springframework.boot.ApplicationArguments;
+import org.springframework.boot.ApplicationRunner;
+import org.springframework.stereotype.Component;
+
+import javax.annotation.Resource;
+
+@Component	// 注意要声明为组件，交给spring容器管理
+public class InitRun implements ApplicationRunner {
+    @Resource
+    private SysSettingService sysSettingService;
+
+    /**
+     * springboot启动后执行的钩子
+     * 系统启动后，刷新缓存
+     *
+     * @param args
+     */
+    @Override
+    public void run(ApplicationArguments args) {
+        try {
+            sysSettingService.refreshCache();
+        } catch (Exception e) {
+            throw new BusinessException(CommonMsg.REFRESH_CACHE_FAIL, e);
+        }
+    }
+}
+```
