--- a/7.消息发送.md
+++ b/7.消息发送.md
@@ -36,3 +36,21 @@ create index user_message_status_index
 > ⚠ 注意
 >
 > 这里的消息不仅仅是简单地记录某人向某人发送了一条消息，还包括一些操作后产生的记录。例如，当我为某篇文章点赞时，消息表会记录一条我为该文章点赞的消息。与其说这是传统意义上的消息，更像是**一种操作记录**或**事件日志**。
+
+为了更好地理解这张表，可以将其视为一张操作记录表。【message_type】字段的5种类型：
+
+1. 系统消息
+2. 评论消息
+3. 文章点赞
+4. 评论点赞
+5. 附件下载
+
+根据这五种消息类型，可以推导出在执行这些操作时，消息表会记录相应的操作信息：
+
+1. **系统消息**：当用户注册或出现公共通知时，系统会生成并发送消息。
+2. **评论消息**：当用户 A 对 B 的文章进行评论时，B 会收到一条通知，提示“用户 A 对你的文章进行了评论”。
+3. **文章点赞**：当用户 A 给 B 的文章点赞时，B 会收到一条通知，提示“用户 A 点赞了你的文章”。
+4. **评论点赞**：当用户 A 给 B 的评论点赞时，B 会收到一条通知，提示“用户 A 点赞了你的评论”。
+5. **附件下载**：当用户 A 下载 B 的附件时，B 会收到一条通知，提示“用户 A 下载了你的附件”。
+
+也就是说，执行以上5种操作时，系统会在消息表中记录相应的操作行为，当操作的详情被记录后，我们在查询出这些操作详情以此来通知被操作的对象，这种通知形式对于被通知者来说就是一个**消息**。
