--- a/9.积分表以及对应CRUD.md
+++ b/9.积分表以及对应CRUD.md
@@ -16,3 +16,125 @@ create table user_points_recode
     comment '用户积分记录表';
 ```
 
+以下操作会执行积分增减，对应操作类型，用数字来表示：
+
+- 账号注册，用1表示。
+- 下载附件，用2表示。
+- 附件被下载，用3表示。
+- 发布评论，用4表示。
+- 发布文章，用5表示。
+- 管理员操作，用6表示。
+- 文章被删除，用7表示。
+- 评论被删除，用8表示。
+
+参考[springboot-vue-note](https://github.com/lingzed/springboot-vue-note/tree/main)第26章快速完成用户积分记录表的对应CRUD，这里不作展示。
+
+
+
+# 2 记录记录操作
+
+当用户完成注册时，我们需要为他分配初始积分，同时需要在积分记录表中记录这一数据。因为不止在注册时会操作积分，在其地方也会操作积分，因此将操作积分提取为一个方法方便调用。
+
+在`UserInfoService`中增加用户操作用户积分的方法并实现：
+
+```java
+// 接口
+/**
+ * 积分操作
+ *
+ * @param userId        用户id
+ * @param operationType 操作类型
+ * @param points        积分
+ */
+void operationPoints(String userId, Integer operationType, Integer points);
+
+// 实现
+@Override
+@Transactional(rollbackFor = Exception.class)
+public void operationPoints(String userId, Integer operationType, Integer points) {
+    try {
+        UserInfo userInfo = userInfoMapper.selectById(userId);
+        Integer currentPoints = userInfo.getCurrentIntegral();
+        Integer version = userInfo.getVersion();
+        log.info("当前用户积分版本为: {}", version);
+        currentPoints = Math.max(currentPoints + points, 0);    // 积分不能为负数
+        Integer row = userInfoMapper.updatePoints(userId, currentPoints, points, version);
+        if (row == 0) throw new BusinessException(CommonMsg.POINTS_OPERATION_FAIL);
+        // 记录积分操作记录
+        UserPointsRecode userPointsRecode = new UserPointsRecode();
+        userPointsRecode.setUserId(userId);
+        userPointsRecode.setOperationType(operationType);
+        userPointsRecode.setPoints(points);
+        Date date = new Date();
+        userPointsRecode.setCreateTime(date);
+        userPointsRecode.setUpdateTime(date);
+        userPointsRecodeMapper.insert(userPointsRecode);
+    } catch (Exception e) {
+        throw new BusinessException(CommonMsg.POINTS_OPERATION_FAIL, e);
+    }
+}
+```
+
+为什么要大费周章的重新定义一个更新积分的接口，而不直接调用现成的`edit()`？这是因为积分操作存在线程安全问题，而`edit()`并没有对线程安全进行处理，所以我们需要重新定义一个避免线程竞争的方法。
+
+## 2.1 积分线程安全和负数积分问题
+
+积分操作存在线程安全问题。例如，B和C同时对A的文章点赞，操作过程中会查询A的当前积分并进行增加，因此积分操作不是原子性的，容易发生竞态条件。我使用了乐观锁来解决这一问题，即在用户信息表中添加了一个 `version` 字段，作为积分操作的版本标识。
+
+在执行积分操作时，会以当前的 `version` 作为条件进行更新，更新成功后版本号会递增。如果B和C同时取出旧积分，由B先执行更新操作并成功，版本号更新。此时，C再进行更新时会发现版本不匹配，导致更新失败，更新的行数为0。此时可以抛出异常或重新尝试。
+
+此外，除了增加积分外，还有扣除积分的操作。无论是增加还是扣除，逻辑上都是通过加法运算实现，扣分时相当于加上负数。但如果扣分的绝对值大于当前积分，可能导致积分为负。为了防止这种情况，最终积分应限制为0，即积分不能低于0。
+
+综上，更新的sql如下：
+
+```xml
+<update id="updatePoints">
+    update user_info
+    <set>
+        <if test="points != null">
+            current_integral = current_integral + #{points},
+        </if>
+        <if test="points != null and points > 0">
+            total_integral = total_integral + #{points},
+        </if>
+        <if test="version != null">
+            version = version + 1,      <!-- 乐观锁 -->
+        </if>
+    </set>
+    <where>
+        <if test="userId != null and userId != ''">user_id = #{userId}</if>
+        <if test="version != null">and version = #{version}</if>
+		<if test="points != null">and current_integral + #{points} >= 0</if>
+    </where>
+</update>
+```
+
+需要保证积分不能为负数，同时还要保证总积分只记录正数增量(总积分只记录增加的积分)。我们这里是将积分计算的逻辑放在sql中，我们还可以将积分计算的逻辑放在程序中进行，算出最终的积分，然后更新为最终积分即可，就是我上面给出的实现。
+
+```java
+Math.max(currentPoints + points, 0);	// 返回 currentPoints + points 和 0 中最大值
+```
+
+最终积分与0进行比较，保证最终积分小于0就为0，然后用最终积分来更新，此时就不需要用最终积分>=0来作为条件，新的sql如下：
+
+```xml
+<update id="updatePoints">
+    update user_info
+    <set>
+        <if test="points != null">
+            current_integral = #{currentPoints},
+        </if>
+        <if test="points != null and points > 0">
+            total_integral = total_integral + #{points},
+        </if>
+        <if test="version != null">
+            version = version + 1,      <!-- 乐观锁 -->
+        </if>
+    </set>
+    <where>
+        <if test="userId != null and userId != ''">user_id = #{userId}</if>
+        <if test="version != null">and version = #{version}</if>
+    </where>
+</update>
+```
+
