--- a/10.参数校验.md
+++ b/10.参数校验.md
@@ -2,15 +2,15 @@
 
 利用AOP前置通知，对方法中的参数进行校验，需要两个注解：
 
-- 【@AccessControl】
-- 【@Valiadtion】
+- `@AccessControl`
+- `@Valiadtion`
 
-## 1.1 
+## 1.1 @AccessControl
 
 标识方法，只对此注解标识的方法进行参数校验。目前定义两个属性：
 
-- 【loginRequired】：是否需要登录才能访问，默认为【false】。
-- 【enableValidation】：是否开启参数校验，默认为【true】。
+- `loginRequired`：是否需要登录才能访问，默认为`false`。
+- `enableValidation`：是否开启参数校验，默认为`true`。
 
 源码：
 
@@ -27,18 +27,18 @@ public @interface AccessControl {
 }
 ```
 
-【loginRequired】可以不要，因为登录视图可以同JWT实现。
+`loginRequired`可以不要，因为登录视图可以同JWT实现。
 
 ## 1.2 @Valiadtion
 
-标识方法参数和类的属性，标识的了此注解的参数或属性才会进行校验。虽然【@AccessControl】会开启参数校验，但是仅仅是起到开启的作用，至于校验哪些参数，怎么校验由【@Valiadtion】来决定，它有这些属性：
+标识方法参数和类的属性，标识的了此注解的参数或属性才会进行校验。虽然`@AccessControl`会开启参数校验，但是仅仅是起到开启的作用，至于校验哪些参数，怎么校验由`@Valiadtion`来决定，它有这些属性：
 
-- 【required】：是否必填，默认为【true】。
-- 【max】：最大值，默认为【Integer.MAX_VALUE】。
-- 【min】：最小值，默认为0。
-- 【regex】：正则表达式，正则可以满足大部分校验情况，默认为【""】。
+- `required`：是否必填，默认为`true`。
+- `max`：最大值，默认为`Integer.MAX_VALUE`。
+- `min`：最小值，默认为0。
+- `regex`：正则表达式，正则可以满足大部分校验情况，默认为`""`。
 
-如果前3种校验无法满足时，可以使用【regex】定义正则表达式，正则可以满足大部分校验情况。
+如果前3种校验无法满足时，可以使用`regex`定义正则表达式，正则可以满足大部分校验情况。
 
 源码：
 
@@ -63,21 +63,21 @@ public @interface Validation {
 
 思路：
 
-1. 切入点为【@AccessControl】标识的方法，若【@AccessControl】为【null】或【enableValidation】为【false】则不开启校验，否则进行校验。
+1. 切入点为`@AccessControl`标识的方法，若`@AccessControl`为`null`或`enableValidation`为`false`则不开启校验，否则进行校验。
 2. 获取目标方法的形参列表和实际参数值列表。
-3. 遍历形参列表，判断参数是否被【@Valiadtion】标识，若是，才进行校验。
+3. 遍历形参列表，判断参数是否被`@Valiadtion`标识，若是，才进行校验。
 4. 进行校验，首先获取参数的类型，不同类型有不同校验规则。
-5. 定义一个校验规则，如果是【String】、【Integer】这种常见的类型，则直接套用校验规则进行校验。
+5. 定义一个校验规则，如果是`String`、`Integer`这种常见的类型，则直接套用校验规则进行校验。
 6. 若为自定义实体这种实体类，则需要遍历内部的属性，将每一个属性套用校验规则进行校验，若属性依然是实体，则递归。
 
 ### 1.3.1 校验规则
 
 1、校验必填性，必填性是校验的第一道工序，无论是什么类型的参数，都要先校验必填性。
 
-- 若非必填且参数值为【null】，则不校验此参数，后续校验也不进行。
-- 若非必填但参数值不为【null】，那么依然校验参数。
-- 若为必填但参数值为【null】，那么抛出参数校验的异常。
-- 若必填但参数值不为【null】，那么进行后续的校验。
+- 若非必填且参数值为`null`，则不校验此参数，后续校验也不进行。
+- 若非必填但参数值不为`null`，那么依然校验参数。
+- 若为必填但参数值为`null`，那么抛出参数校验的异常。
+- 若必填但参数值不为`null`，那么进行后续的校验。
 
 源码：
 
@@ -88,10 +88,10 @@ if(!required && value == null) return;
 if(required && value == null) throw new BusinessException();
 ```
 
-2、针对参数的类型进行特定的校验，此处只针对【String】和【Integer】，其他类型可扩展：
+2、针对参数的类型进行特定的校验，此处只针对`String`和`Integer`，其他类型可扩展：
 
-- 对于【String】参数，校验非空性。
-- 对于【Integer】参数，校验最值。
+- 对于`String`参数，校验非空性。
+- 对于`Integer`参数，校验最值。
 
 源码：
 
@@ -114,7 +114,7 @@ if (value instanceof List<?> && ((List<?>) value).isEmpty())
     throw new BusinessException(ResponseCodeEnum.CODE_600);
 ```
 
-4、正则校验，也是最强大的校验，它能满足大部分校验场景，当必填、非空、最值不能满足校验需求时，可以定义正则表达式来进行校验。【@Validation】中属性默认值为【""】，当【regex】非空时，才进行正则校验。
+4、正则校验，也是最强大的校验，它能满足大部分校验场景，当必填、非空、最值不能满足校验需求时，可以定义正则表达式来进行校验。`@Validation`中属性默认值为`""`，当`regex`非空时，才进行正则校验。
 
 源码：
 
@@ -164,7 +164,7 @@ private void validParam(Validation validation, Object value) {
 
 1. 依然是先校验实体参数的必填性。
 2. 然后拿到实体的属性列表，遍历。
-3. 遍历每个属性，查看属性是否有【@Validation】注解，有则校验，没有则跳过。
+3. 遍历每个属性，查看属性是否有`@Validation`注解，有则校验，没有则跳过。
 4. 通过反射拿到属性值，套用定义好的校验规则进行校验。
 5. 若属性依然是实体，则递归进行校验。
 
