--- a/19.文章模块-附件下载.md
+++ b/19.文章模块-附件下载.md
@@ -514,6 +514,7 @@ Found 'Content-Type:application/zip' in response
         ByteArrayOutputStream aos = new ByteArrayOutputStream();
         IOUtils.copy(is, aos);      // 输入流中的数据复制到输出流
         HttpHeaders headers = new HttpHeaders();
+        headers.add("Content-Type", MIMETypeEnum.getContentType(attachment.getFiletype()));
         String filename = URLEncoder.encode(attachment.getFilename());
         headers.add("Content-Disposition", "attachment; filename=" + filename);
         headers.add("Content-Length", String.valueOf(attachment.getFileSize()));
@@ -538,7 +539,7 @@ Found 'Content-Type:application/zip' in response
                 File file = new File(serverPath);
                 if (!file.exists() || file.isDirectory())
                     throw new BusinessException(CommonMsg.FILE_NOT_FOUND);
-                try (InputStream is = new FileInputStream(serverPath)) {
+                try (InputStream is = new FileInputStream(file)) {
                     ZipEntry zipEntry = new ZipEntry(attachment.getFilename());
                     zos.putNextEntry(zipEntry);
                     IOUtils.copy(is, zos);
@@ -549,6 +550,7 @@ Found 'Content-Type:application/zip' in response
         // 压缩流关闭后，再写出到字节数组，否则压缩文件内容缺失
         byte[] byteArray = aos.toByteArray();
         HttpHeaders headers = new HttpHeaders();
+        headers.add("Content-Type", MIMETypeEnum.ZIP.getContentType());
         String filename = URLEncoder.encode(String.format(Constant.ZIP_FILENAME, StrUtil.formatDate("_yyyyMMdd_hhmmss")));
         headers.add("Content-Disposition", "attachment; filename=" + filename);
         headers.add("Content-Length", String.valueOf(byteArray.length));
