--- a/21.评论模块-查询评论列表.md
+++ b/21.评论模块-查询评论列表.md
@@ -86,8 +86,7 @@ create index comments_top_type_index
 
 评论查询分为2个接口：
 
-- 查询1级评论：
-  - 同时查询1级评论下的第1页2级评论。
+- 查询1级评论：同时查询1级评论下的第1页2级评论。
 - 查询2级评论。
 
 在查询1级评论时，需要同时获取该评论下的第1页2级评论数据。因为1级评论与其直接子评论存在关联，查询时需要确保1级评论及其对应的2级评论能够一并返回，以便展示完整的评论信息。
@@ -197,7 +196,7 @@ localhost:8091/web/comments
 - 页码。
 - 每页10条目。
 
-登录状态影响评论表的【status】字段，和文章状态一样：
+登录状态影响评论表的`status`字段，和文章状态一样：
 
 - 管理员不能查看删除的评论。
 - 普通登录用户，能查看审核评论或自己的待审核的评论。
@@ -273,13 +272,13 @@ localhost:8091/web/comments
 </select>
 ```
 
-在上面的SQL中，我使用了子查询来检查用户是否对某条评论进行了点赞。具体而言，子查询通过【targetId】(评论id，来自父查询的每行comment_id)和【likerId】(点赞人id)，在`like_recode`表中查找记录来判断当前用户是否已对该评论进行点赞。如果在`like_recode`表中有相应记录，子查询将返回1，否则返回0。
+在上面的SQL中，我使用了子查询来检查用户是否对某条评论进行了点赞。具体而言，子查询通过`targetId`(评论id，来自父查询的每行comment_id)和`likerId`(点赞人id)，在`like_recode`表中查找记录来判断当前用户是否已对该评论进行点赞。如果在`like_recode`表中有相应记录，子查询将返回1，否则返回0。
 
 > 在MySQL中，布尔值表示为1和0，而MyBatis框架会自动将1和0映射为`true`和`false`。
 
 那么1和0可以作为布尔值表示**已点赞**和**未点赞**的状态，映射为`true`和`false`，用于表示点赞状态。
 
-而未登录用户查询，不需要查询点赞状态，因此用【userId】控制。
+而未登录用户查询，不需要查询点赞状态，因此用`userId`控制。
 
 然后查询2级评论，来自于上面的1级评论，因此我们需要收集1级评论的id作为2级评论的父id，查询条件如下：
 
