--- a/26.评论模块-发布评论.md
+++ b/26.评论模块-发布评论.md
@@ -199,7 +199,7 @@ Post /web/comments/post/l1
     CommentVo processPostL1Comment(Comment comment, boolean needAudit);
 ```
 
-第二个参数【needAudit】表示是否审核评论，需要通过此参数来决定是否进行审核后的处理。
+第二个参数`needAudit`表示是否审核评论，需要通过此参数来决定是否进行审核后的处理。
 
 对于1级评论而言，只需要判断文章是否存在即可。
 
@@ -262,7 +262,7 @@ Post /web/comments/post/l1
     }
 ```
 
-为什么单独定义了一个方法【processPassCommentReview()】？
+为什么单独定义了一个方法`processPassCommentReview()`？
 
 原因是，除了在1、2级评论中复用外，还可以在管理端复用，管理员去审核的时候调用审核接口，接口再来调用这个方法。
 
@@ -449,7 +449,7 @@ Post /web/comments/post/l2
 - 回复1级评论，需要检查该一级评论是否真实存在
 - 回复2级评论，需要检查该二级评论是否真实存在，且属于目标一级评论的子评论
 
-根据【receiverId == null】来判断回复的是1级还是2级，并动态构建查询条件，查询评论表以确认被回复的评论是否存在。
+根据`receiverId == null`来判断回复的是1级还是2级，并动态构建查询条件，查询评论表以确认被回复的评论是否存在。
 
 根据查询结果，进行以下判断：
 
@@ -468,7 +468,7 @@ commentQueryDto.setArticleId(comment.getArticleId());
 commentQueryDto.setCommentId(comment.getpCommentId());	// 找评论id为pid
 ```
 
-参数 **`pCommentId`** 即该一级评论的 id，因为当你回复一级评论时，该评论就是你的父级。因此，查询时需要通过 **文章 ID** 和 **评论 ID** 来确保该评论属于当前文章。
+参数 **`pCommentId`** 即该一级评论的 id(当你回复一级评论时，该评论就是你的父级)。因此，查询时需要通过 **文章 ID** 和 **评论 ID** 来确保该评论属于当前文章。
 
 若回复2级评论，则需要判断该2级评论是否，因此需构建如下查询条件：
 
@@ -492,9 +492,7 @@ if (noReceiver && !Objects.equals(comments.get(0).getpCommentId(), Constant.NUM_
 
 这个判断的核心是在没有接收人的情况下，判断查询结果是否属于一级评论。为什么需要这样判断？
 
-因为有可能查询出2级评论，在绕过前端直接访问接口的情况下，比如对文章a下的1级评论b进行回复，而a下还有一条2级评论c，此时通过文章id和父id查询，若父id恰好是c的id，那么就会把c查询出来，结果集不为空进而插入这条回复。但是c是2级评论，回复的对象都改变了，我们的消息接收人也变为c的发送人，而不是a的了：
-
-因为在绕过前端直接访问接口情况下，查询可能会返回二级评论，而不是我们预期的一级评论。举个例子，如果我们在文章 `a` 下对一级评论 `b` 进行回复，而文章 `a` 下还存在一条二级评论 `c`，当我们通过文章ID和父评论ID来查询时，假如父评论ID恰好是二级评论 `c` 的 ID，就可能错误地查询到二级评论 `c`。查询结果不为空时，系统就会误以为该二级评论是回复的目标，进而错误地插入回复。
+因为在绕过前端直接访问接口情况下，查询可能会返回二级评论，而不是我们预期的一级评论。举个例子，如果我们在文章 `a` 下对一级评论 `b` 进行回复，而文章 `a` 下还存在一条二级评论 `c`，当我们通过文章ID和父评论ID来查询时，假如父评论ID恰好是二级评论 `c` 的 ID(完全有可能瞎传参数碰巧传成了`c`的id)，就可能错误地查询到二级评论 `c`。查询结果不为空时，系统就会误以为该二级评论是回复的目标，进而错误地插入回复。
 
 从错误的回复目标中拿到的值自然也是错误的
 
