--- a/26.评论模块-发布评论.md
+++ b/26.评论模块-发布评论.md
@@ -500,7 +500,7 @@ if (noReceiver && !Objects.equals(comments.get(0).getpCommentId(), Constant.NUM_
 String msgReceiver = comments.get(0).getSenderId();	// 比如拿到错误的回复人
 ```
 
-此时，`msgReceiver` 会是 `c` 的发送人，而不是原本一级评论 `a` 的接收人。这样就导致了回复对象发生了变化，消息接收人也错误地指向了二级评论的发送人。
+此时，`msgReceiver` 会是 `c` 的发送人，而不是原本一级评论 `a` 的发送人。这样就导致了回复对象发生了变化，消息接收人也错误地指向了二级评论的发送人。
 
 因此，我们通过这个判断，确保只有在没有接收人的情况下，且查询到的评论确实是一级评论时，才继续进行回复。这样做的目的是为了防止在绕过前端直接访问接口的情况下，因查询到二级评论而导致回复对象和接收人错误。
 
