--- a/19.文章模块-附件下载.md
+++ b/19.文章模块-附件下载.md
@@ -588,3 +588,175 @@ try(ZipOutputStream zos = new ZipOutputStream(aos)){
 ```
 
 4、我们可以选择捕获异常并返回自定义的错误响应，或者将异常抛出交由全局异常处理器进行处理。如果选择自定义响应，返回错误响应，需要确保错误信息作为响应体返回，而不是直接修改响应对象，否则浏览器可能无法正确处理。
+
+---
+
+
+
+# 2 接口更新 
+
+## 2.1 🌐新下载附件接口
+
+地址：
+
+```swift
+Get /web/articles/attachment?articleId=000981283431340
+```
+
+请求参数：
+
+| 参数名    | 类型     | 必填项 | 说明   |
+| --------- | -------- | ------ | ------ |
+| articleId | `string` | `true` | 文章id |
+
+响应：
+
+```
+数据流
+```
+
+---
+
+## 2.2 接口更新
+
+更新后的下载附件接口，只有一个文章id查询，其余数据通过文章id查询。因为像下载积分这样的参数通过前端来发起不安全，攻击者可能会篡改下载所需积分。
+
+在`ArticleController`中，更新查询文章，然后拿到文章标题、文章作者数据的操作：
+
+```java
+/**
+     * 文章附件下载
+     *
+     * @param session
+     * @param articleId
+     */
+    @GetMapping("/attachment")
+    @AccessControl(loginRequired = true)
+    @Transactional(rollbackFor = Exception.class)
+    public ResponseEntity<byte[]> attachmentDownload(HttpSession session,
+                                                     @Validation(max = 15) String articleId) {
+        try {
+            ArticleVo article = articleService.findById(articleId);
+            if (Objects.isNull(article))
+                throw new BusinessException(ResponseCodeEnum.CODE_600);
+            UserInfoSessionDto userInfo = (UserInfoSessionDto) session.getAttribute(Constant.USERINFO_SESSION_KEY);
+            List<Attachment> attachments = articleService.processAttachmentDownload(userInfo, articleId,
+                    article.getTitle(), article.getUserId());
+            if (attachments.size() > 1) {
+                return downloadAsZip(attachments);           // 压缩下载
+            } else {
+                Attachment attachment = attachments.get(0);
+                String contentType = MIMETypeEnum.getContentType(attachment.getFiletype());
+                // 单文件下载
+                return fileService.downloadFile(attachment.getFilepath(), attachment.getFilename(), contentType);
+            }
+        } catch (BusinessException e) {
+            throw e;
+        } catch (Exception e) {
+            throw new BusinessException(CommonMsg.FILE_DOWNLOAD_FAIL, e);
+        }
+    }
+```
+
+更新业务层接口：
+
+```java
+/**
+     * 处理文章附件下载中积分情况记录&消息记录
+     *
+     * @param userinfo
+     * @param articleId
+     * @param title
+     * @param authorId
+     * @return
+     */
+    List<Attachment> processAttachmentDownload(UserInfoSessionDto userinfo, String articleId, String title, String authorId);
+```
+
+在实现中：
+
+下载所需积分通过遍历附件列表计算而来，同时我还加入了管理员下载的判断，和作者下载一样，管理员下载不需要消耗积分，不更新积分记录，不用记录消息。
+
+```java
+/**
+     * 处理文章附件下载中积分情况记录&消息记录
+     *
+     * @param userinfo
+     * @param articleId
+     * @param title
+     * @param authorId
+     * @return
+     */
+    @Override
+    @Transactional(rollbackFor = Exception.class)
+    public List<Attachment> processAttachmentDownload(UserInfoSessionDto userinfo, String articleId, String title,
+                                                      String authorId) {
+        List<Attachment> attachments = attachmentMapper.selectByArticleIdAndUserId(articleId, authorId);
+        if (Objects.isNull(attachments) || attachments.isEmpty())
+            throw new BusinessException(CommonMsg.FILE_NOT_FOUND);
+        // 作者 || 管理员 直接下载，不消耗积分，不更新积分记录，不记录消息
+        if (!userinfo.getIsAdmin() && !Objects.equals(userinfo.getUserId(), authorId)) {
+            // 如果已经下载过，直接下载
+            AttachmentDownloadRecord downloadRecord = attachmentDownloadRecordMapper
+                    .selectByArticleIdAndDownloaderId(articleId, userinfo.getUserId());
+            if (Objects.isNull(downloadRecord)) {
+                UserInfo user = userInfoMapper.selectById(userinfo.getUserId());
+                int needPoints = totalPoints(attachments);  // 计算下载需要的积分
+                if (user.getCurrentIntegral() < needPoints)
+                    throw new BusinessException(CommonMsg.INSUFFICIENT_POINTS);
+                // 用户下载，扣除积分，记录积分操作
+                userPointsRecordService.processUserPoints(userinfo.getUserId(), OperationTypeEnum.DOWNLOAD_ATTACHMENTS.getType(),
+                        -needPoints);
+                // 作者，增加积分，记录积分操作
+                userPointsRecordService.processUserPoints(authorId, OperationTypeEnum.ATTACHMENT_DOWNLOADED.getType(),
+                        needPoints);
+                AttachmentDownloadRecord adr = new AttachmentDownloadRecord();
+                adr.setArticleId(articleId);
+                adr.setDownloaderId(userinfo.getUserId());
+                adr.setDownloadTime(new Date());
+                attachmentDownloadRecordMapper.insert(adr); // 下载行为记录
+            }
+            // 记录下载消息，作者接收
+            UserMessage userMessage = new UserMessage();
+            userMessage.setReceivedUserId(authorId);
+            userMessage.setArticleId(articleId);
+            userMessage.setArticleTitle(title);
+            userMessage.setSenderAvatar(userinfo.getAvatar());
+            userMessage.setSendUserId(userinfo.getUserId());
+            userMessage.setSendNickName(userinfo.getNickName());
+            userMessage.setMessageType(MessageTypeEnum.ATTACHMENT.getType());
+            userMessage.setMessageContent(Constant.DOWNLOAD_MESSAGE_CONTENT);
+            userMessage.setStatus(MessageStatusEnum.NO_READ.getStatus());
+            Date date = new Date();
+            userMessage.setCreateTime(date);
+            userMessage.setUpdateTime(date);
+            userMessageMapper.insert(userMessage);
+        }
+        attachmentMapper.updateAttachmentDownloadCount(articleId, authorId);    // 更新附件下载量
+        return attachments;
+    }
+```
+
+计算总积分方法如下：
+
+需要注意lambda中只能访问`final` 或 effectively final（事实上不可变）的局部变量，但是被`fianl`修饰的话，变量不可更改也就是无法进行计算，因此我们可以通过一个包装类来包装计算的值，让变量指向包装类的地址不变，改变其内部的值即可。
+
+```java
+/**
+     * 计算下载所需积分
+     *
+     * @param attachments
+     * @return
+     */
+    private Integer totalPoints(List<Attachment> attachments) {
+        // 声明为AtomicInteger，因为lambda表达式内的无法直接修改外部的局部变量
+        // lambda 表达式只能访问外部的 final 或 effectively final（事实上不可变）的局部变量
+        // 因此我们可以定义一个包装类来包装这个变量，其引用地址值不变（满足事实上不可变），但是内部的值可以变化
+        AtomicInteger total = new AtomicInteger(0);
+        attachments.forEach(e -> total.addAndGet(e.getDownloadPoints()));
+        return total.get();
+    }
+```
+
+
+
